# mayadle

./: Cargo.toml
src/: api.rs  guess.rs  index.rs  main.rs  session.rs
static/: style.css
templates/: guess1.html  guess2.html  guess3.html  index.html
