[package]
name = "mayadle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
askama = "0.12.1"
axum = { version = "0.7.5", features = ["tracing", "form"] }
http-body = "1.0.0"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.198"
tokio = { version = "1.37.0", features = ["rt-multi-thread"]}
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "fs"] }
tower-sessions = "0.12.2"
tower-sessions-sqlx-store = { version = "0.12.0", features = ["sqlite"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
